# metrology

add_post_pro/add_post_pro_bringup/launch/: add_post_pro_bringup.launch  add_post_pro_combined.launch  add_post_pro_live_bringup.launch  realsense.launch
add_post_pro/add_post_pro_config/config/: kinematics.yaml
add_post_pro/add_post_pro_control/: CMakeLists.txt  package.xml
add_post_pro/add_post_pro_control/config/: .~lock.waypoints.csv#  .~lock.waypoints_playground.csv#  new_waypoints.csv  sweep.csv  waypoints.csv  waypoints_playground.csv
add_post_pro/add_post_pro_control/script/: demo_solution.cpp  example.csv  get_joint_solution.py  manual_control.py  modified_control.py  move_robot.py  move_robot_equiv.py  pose_publisher.py  sync_gazebo_to_live.py  trajectory_modifier.py
add_post_pro/add_post_pro_control/src/: control_test.cpp  get_joint_solution.cpp  move_tests.cpp  potato.cpp  turntable_test.cpp  viewpoint_control.cpp
add_post_pro/add_post_pro_control/srv/: GenerateViewPlan.srv
add_post_pro/add_post_pro_equiv_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
add_post_pro/add_post_pro_equiv_moveit_config/config/: add_post_pro_controllers.yaml  add_post_pro_equiv.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  sensors_3d.yaml
add_post_pro/add_post_pro_equiv_moveit_config/launch/: add_post_pro_equiv_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  metrology_equiv.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  (+6 more)
add_post_pro/add_post_pro_robot_l515/: .setup_assistant  CMakeLists.txt  package.xml
add_post_pro/arm_depth_moveit/: .setup_assistant  CMakeLists.txt  package.xml
add_post_pro/denso_arm_vanilla/: .setup_assistant  CMakeLists.txt  package.xml
add_post_pro/depth_processing/: CMakeLists.txt  package.xml
add_post_pro/laser_scanner_pkg/: CMakeLists.txt
add_post_pro/pcl_sensor_data/: CMakeLists.txt
add_post_pro/supervoxel_segmentation/: CMakeLists.txt  package.xml  raw_poses.csv
add_post_pro/supervoxel_segmentation/Model Objects/: 5_mm_Wrench_stl_file.STL  5_mm_Wrench_stl_refined.STL  cube.stl
add_post_pro/supervoxel_segmentation/include/pcl_playground/: segment.h
add_post_pro/supervoxel_segmentation/models/: box.pcd  bunny.pcd  cube.pcd  cube2.pcd  jig.pcd  test_bunny.pcd  wrench.pcd
add_post_pro/supervoxel_segmentation/parameters/: parameters.txt  viewpoints.txt  waypoints.txt
add_post_pro/supervoxel_segmentation/src/: pcl_basic.cpp  reg_demo2.cpp  reg_demo3.cpp  reg_demo4.cpp  registration_demo.cpp  segment.cpp  vcc_node.cpp  viewpoints.csv  voxel2.cpp  voxel_example.cpp  waypoints.txt
add_post_pro/turntable_control/: CMakeLists.txt  package.xml
add_post_pro/view_planning/: CMakeLists.txt  package.xml
add_post_pro/visualization_utils/: CMakeLists.txt  package.xml
add_post_pro_equiv_arm_ikfast_plugin/: CMakeLists.txt  add_post_pro_equiv_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
add_post_pro_equiv_arm_ikfast_plugin/src/: add_post_pro_equiv_arm_ikfast_moveit_plugin.cpp  add_post_pro_equiv_arm_ikfast_solver.cpp  ikfast_playground.cpp
add_post_pro_robot_l515_arm_ikfast_plugin/: CMakeLists.txt  add_post_pro_robot_l515_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
add_post_pro_robot_l515_arm_ikfast_plugin/src/: add_post_pro_robot_l515_arm_ikfast_moveit_plugin.cpp  add_post_pro_robot_l515_arm_ikfast_solver.cpp
vs6577_arm_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
vs6577_arm_ikfast_plugin/src/: vs6577_arm_ikfast_moveit_plugin.cpp  vs6577_arm_ikfast_solver.cpp
(+189 files in other folders)
